--- a/package.json
+++ b/package.json
@@ -1,17 +1,35 @@
 {
   "name": "pushnews",
   "version": "1.0.0",
-  "description": "pushNews: An Ionic project",
+  "description": "pushNews: test Ionic project with push notifications",
+  "author": "Oleksandr Telnov",
+  "license": "MIT",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "apn": "^1.7.3",
+    "body-parser": "^1.12.2",
+    "express": "^4.12.3",
     "gulp": "^3.5.6",
-    "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^0.7.1",
+    "lodash": "^3.6.0",
+    "mongoose": "^4.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
-  }
+  },
+  "cordovaPlugins": [
+    "org.apache.cordova.console",
+    "org.apache.cordova.device",
+    "com.ionic.keyboard",
+    "com.phonegap.plugins.PushPlugin",
+    "org.apache.cordova.inappbrowser"
+  ]
 }
