twitter auth (frontend)

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "ngCordova": "~0.1.14-alpha",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "jsSHA": "~1.6.0"
   }
 }
